force-app/main/default/objects/BGR__c/fields/Valve_Examination_Flag__c.field-meta.xml
<CustomField>
    <fullName>Valve_Examination_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valve Examination Flag</label>
    <type>Checkbox</type>
</CustomField>