force-app/main/default/objects/BGR__c/validationRules/ATEX_certifcation_cannot_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>ATEX_certifcation_cannot_be_selected</fullName>
    <active>true</active>
    <description>The Atex certification cannot be selected if  CU TR is selected</description>
    <errorConditionFormula>AND(
				 ISPICKVAL(Atex__c, &quot;Y&quot;),
				 Certifications_flag__c = true,
				 ISPICKVAL(GOST_CU_Tr_010_2011__c, &quot;Y&quot;)
				)</errorConditionFormula>
    <errorDisplayField>Atex__c</errorDisplayField>
    <errorMessage>Please select CU TR or ATEX, both cannot be selected</errorMessage>
</ValidationRule>