force-app/main/default/objects/BGR__c/validationRules/Atmospheric_pressure_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Atmospheric_pressure_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISBLANK(Atmospheric_Pressure__c),  
Bypass__c = FALSE,
Relief_flag__c = TRUE
)</errorConditionFormula>
    <errorMessage>Atmospheric Pressure: Please Enter a Value</errorMessage>
</ValidationRule>