force-app/main/default/objects/BGR__c/validationRules/Atmospheric_Pressure_units_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Atmospheric_Pressure_units_is_mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISPICKVAL(Atmospheric_Pressure_Units__c , &quot;&quot;),  
Bypass__c = FALSE,
Relief_flag__c = TRUE
)</errorConditionFormula>
    <errorMessage>Atmospheric Pressure Units: Please Select a Value</errorMessage>
</ValidationRule>