force-app/main/default/objects/BGR__c/validationRules/BGR_Vacuum_Settings_units_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>BGR_Vacuum_Settings_units_cannot_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				NOT(ISNEW()),
				ISPICKVAL( Service_Type__c, &quot;Vacuum&quot;),
				ISPICKVAL( Setting_Units__c, &quot;&quot;),
				NOT(ISBLANK(Setting__c)),  
				Bypass__c = FALSE,
				
    Relief_flag__c = TRUE
   )</errorConditionFormula>
    <errorMessage>Vacuum Setting Units: Please Select a Value from dropdown</errorMessage>
</ValidationRule>