force-app/main/default/objects/BGR__c/validationRules/Compressibility_factor_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Compressibility_factor_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				NOT(ISNEW()),
				ISPICKVAL(Supply_Gas__c, &quot;Customer Specified&quot;),
					NOT(ISBLANK(Customer_Specified_Media__c)), 
					NOT(ISBLANK(Molecular_Weight__c)),
					ISBLANK(Compressibility_Factor__c)
				)</errorConditionFormula>
    <errorMessage>Compressibility Factor: Please enter a Value</errorMessage>
</ValidationRule>