force-app/main/default/objects/BGR__c/validationRules/Configuration_Completed_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Configuration_Completed_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
Configuration_Complete__c=FALSE
)</errorConditionFormula>
    <errorMessage>Configuration of the Product is not Complete.</errorMessage>
</ValidationRule>