force-app/main/default/objects/BGR__c/validationRules/Connection_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Connection_cannot_be_null</fullName>
    <active>true</active>
    <description>The Connection field cannot be null and must have a value - Created by Vinayak 11/10/2019</description>
    <errorConditionFormula>AND(
				NOT(ISNEW()),
				ISBLANK(Connection_dynamic__c),
				Bypass__c = FALSE,
    Product_material_options_flag__c = TRUE    
    )</errorConditionFormula>
    <errorMessage>Connection: Please Select a Value from dropdown</errorMessage>
</ValidationRule>