force-app/main/default/objects/BGR__c/validationRules/CU_TR_certificate_cannot_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>CU_TR_certificate_cannot_be_selected</fullName>
    <active>true</active>
    <description>The CU TR certificate cannot be selected if Atex certificate is selected</description>
    <errorConditionFormula>AND(
   ISPICKVAL(Atex__c, &quot;Y&quot;),
   Certifications_flag__c = true,
   ISPICKVAL(GOST_CU_Tr_010_2011__c, &quot;Y&quot;)
)</errorConditionFormula>
    <errorDisplayField>GOST_CU_Tr_010_2011__c</errorDisplayField>
    <errorMessage>Please select CU TR or ATEX, both cannot be selected</errorMessage>
</ValidationRule>