force-app/main/default/objects/BGR__c/validationRules/customer_specified_mandatory_field.validationRule-meta.xml
<ValidationRule>
    <fullName>customer_specified_mandatory_field</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				NOT(ISNEW()),
				 Narrow_selection_on_flow_requirements__c = true,
				ISPICKVAL(Supply_Gas__c, &quot;Customer Specified&quot;),
				ISBLANK(Customer_Specified_Media__c),
				 Section_B_flag__c = true
				)</errorConditionFormula>
    <errorMessage>Media Name: Please Enter a Value</errorMessage>
</ValidationRule>