force-app/main/default/objects/BGR__c/validationRules/Flow_units_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Flow_units_cannot_be_null</fullName>
    <active>true</active>
    <description>The Flow units field cannot be null - Created by Vinayak 10/10/2019</description>
    <errorConditionFormula>AND(
				NOT(ISNEW()),
				NOT(ISNEW()),
NOT(ISBLANK(Customer_Specified_Media__c)),
NOT(ISBLANK(Molecular_Weight__c)),
NOT(ISBLANK(Compressibility_Factor__c)),
NOT(ISBLANK(Ratio_of_Specific_Heats__c)),
NOT(ISBLANK( Minimum_Required_Flow_Capacity__c )),
				ISPICKVAL( Flow_Units__c, &quot;&quot;),
				Bypass__c = FALSE,
				Narrow_selection_on_flow_requirements__c = true,
    Section_B_flag__c = TRUE
  )</errorConditionFormula>
    <errorDisplayField>Flow_Units__c</errorDisplayField>
    <errorMessage>Flow Units: Please Select a Value from dropdown</errorMessage>
</ValidationRule>