force-app/main/default/objects/BGR__c/validationRules/Media_name_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Media_name_cannot_be_blank</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				NOT(ISNEW()),
				 Narrow_selection_on_flow_requirements__c = true,
				ISBLANK( Customer_Specified_Media__c ),
				 Section_B_flag__c = true
				)</errorConditionFormula>
    <errorDisplayField>Customer_Specified_Media__c</errorDisplayField>
    <errorMessage>Media Name: Please Enter a Value</errorMessage>
</ValidationRule>