force-app/main/default/objects/BGR__c/validationRules/Minimum_reqrd_flw_capacity_cant_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_reqrd_flw_capacity_cant_be_null</fullName>
    <active>true</active>
    <description>The field Minimum required flow capacity cannot be null - Created by Vinayak 10/10/2019</description>
    <errorConditionFormula>AND(
				NOT(ISNEW()),
				NOT(ISBLANK(Customer_Specified_Media__c)),
    NOT(ISBLANK(Molecular_Weight__c)),
    NOT(ISBLANK(Compressibility_Factor__c)),
				NOT(ISBLANK(Ratio_of_Specific_Heats__c)),
				ISBLANK( Minimum_Required_Flow_Capacity__c ),
				Bypass__c = FALSE,
				Narrow_selection_on_flow_requirements__c = true,
    Section_B_flag__c = TRUE
				)</errorConditionFormula>
    <errorMessage>Minimum Required Flow Capacity: Please Enter a Value</errorMessage>
</ValidationRule>