force-app/main/default/objects/BGR__c/validationRules/Molecular_weight_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Molecular_weight_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				NOT(ISNEW()),
				ISPICKVAL(Supply_Gas__c, &quot;Customer Specified&quot;),
				NOT(ISBLANK(Customer_Specified_Media__c)), 
								ISBLANK(Molecular_Weight__c),
				 Section_B_flag__c = true					
				)</errorConditionFormula>
    <errorDisplayField>Molecular_Weight__c</errorDisplayField>
    <errorMessage>Molecular Weight: Please enter a Value</errorMessage>
</ValidationRule>