force-app/main/default/objects/BGR__c/validationRules/MRFC_for_Natural_Gas.validationRule-meta.xml
<ValidationRule>
    <fullName>MRFC_for_Natural_Gas</fullName>
    <active>false</active>
    <description>This validation rule is to check the value range for Minimum required flow capacity field for Natural gas</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISPICKVAL( Supply_Gas__c ,&quot;Natural Gas&quot;),
    Bypass__c = FALSE,
    Section_B_flag__c = TRUE,
    OR(
        Converted_Flow_Capacity__c &lt; 3660,
        Converted_Flow_Capacity__c &gt; 119200
       )
    )</errorConditionFormula>
    <errorDisplayField>Minimum_Required_Flow_Capacity__c</errorDisplayField>
    <errorMessage>The valid values for Minimum Required Flow Capacity for the selected Natural Gas should be in range of 3660 to 119200 SCFH</errorMessage>
</ValidationRule>