force-app/main/default/objects/BGR__c/validationRules/MRFC_for_Nitrogen.validationRule-meta.xml
<ValidationRule>
    <fullName>MRFC_for_Nitrogen</fullName>
    <active>false</active>
    <description>This validation rule is to check the value range for Minimum required flow capacity field for Nitrogen gas</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISPICKVAL( Supply_Gas__c ,&quot;Nitrogen&quot;),
    Bypass__c = FALSE,
    Section_B_flag__c = TRUE,
    OR(
        Converted_Flow_Capacity__c &lt; 2810,
        Converted_Flow_Capacity__c &gt; 93700
       )
    )</errorConditionFormula>
    <errorDisplayField>Minimum_Required_Flow_Capacity__c</errorDisplayField>
    <errorMessage>The valid values for Minimum Required Flow Capacity for the selected Gas  Nitrogen should be in range of 2810 to 93700 SCFH</errorMessage>
</ValidationRule>