force-app/main/default/objects/BGR__c/validationRules/Orifice_combo_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Orifice_combo_cannot_be_blank</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISBLANK( Combo_Orifice_Setting__c ),
				Bypass__c = FALSE,
Product_selection_flag__c = TRUE
)</errorConditionFormula>
    <errorMessage>Please select a value from the dropdown</errorMessage>
</ValidationRule>