force-app/main/default/objects/BGR__c/validationRules/Orifice_settings_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Orifice_settings_cannot_be_null</fullName>
    <active>false</active>
    <description>The Orifice settings field must have atleast one value - Created by Vinayak 10/10/2019</description>
    <errorConditionFormula>AND(
				NOT(ISNEW()),
				ISPICKVAL( Orifice_Setting__c, &quot;&quot;),
				Bypass__c = FALSE,
    Product_selection_flag__c = TRUE
				)</errorConditionFormula>
    <errorDisplayField>Orifice_Setting__c</errorDisplayField>
    <errorMessage>Please Select a value from the dropdown</errorMessage>
</ValidationRule>