force-app/main/default/objects/BGR__c/validationRules/PartNumberBase_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PartNumberBase_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
						NOT(ISNEW()),
LEN(ASSYPARTNOBASE__c )&lt;&gt;16
)</errorConditionFormula>
    <errorMessage>ASSYPARTNOBASE__c: Part Number must be less than 16 characters</errorMessage>
</ValidationRule>