force-app/main/default/objects/BGR__c/validationRules/Quantity_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_cannot_be_null</fullName>
    <active>true</active>
    <description>The Quantity field cannot be null - Created by Vinayak 10/10/2019</description>
    <errorConditionFormula>AND(
				NOT(ISNEW()),
				ISBLANK( Quantity__c),
				Bypass__c = FALSE,
    Product_material_options_flag__c = TRUE
				)</errorConditionFormula>
    <errorMessage>Quantity: Please Enter a Value Greater than 0</errorMessage>
</ValidationRule>