force-app/main/default/objects/BGR__c/validationRules/Quantity_postive_integer_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_postive_integer_only</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				Product_material_options_flag__c = TRUE,
				NOT(REGEX(Text(Quantity__c), &quot;^\\d+$&quot;)),
				NOT(ISBLANK(Quantity__c))
				)</errorConditionFormula>
    <errorMessage>Quantity: Please enter a positive integer value greater than 0</errorMessage>
</ValidationRule>