force-app/main/default/objects/BGR__c/validationRules/Quantity_value_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_value_cannot_be_negative</fullName>
    <active>false</active>
    <description>The Quantity field value cannot be a negative integer - Created by Vinayak 10/10/2019</description>
    <errorConditionFormula>AND(
				Product_material_options_flag__c = TRUE,
			 Quantity__c &lt;= 0
				)</errorConditionFormula>
    <errorMessage>Please Enter a Positive integer value greater than 0</errorMessage>
</ValidationRule>