force-app/main/default/objects/BGR__c/validationRules/Ratio_of_specific_heats_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Ratio_of_specific_heats_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				NOT(ISNEW()),
				ISPICKVAL(Supply_Gas__c, &quot;Customer Specified&quot;),
				NOT(ISBLANK(Customer_Specified_Media__c)),
    NOT(ISBLANK(Molecular_Weight__c)),
    NOT(ISBLANK(Compressibility_Factor__c)),
				ISBLANK(Ratio_of_Specific_Heats__c),
				 Section_B_flag__c = true
				)</errorConditionFormula>
    <errorMessage>Ratio of Specific Heats: Please enter a Value</errorMessage>
</ValidationRule>