force-app/main/default/objects/BGR__c/validationRules/Service_type_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_type_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISPICKVAL( Service_Type__c, &quot;&quot;),
Bypass__c = FALSE,
Relief_flag__c = TRUE
)</errorConditionFormula>
    <errorMessage>Service Type: Please select a value</errorMessage>
</ValidationRule>