force-app/main/default/objects/BGR__c/validationRules/Service_type_Must_select_a_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_type_Must_select_a_value</fullName>
    <active>false</active>
    <description>The field Service type is Mandatory and atleast one value must be selected - Created by Vinayak 10/10/2019</description>
    <errorConditionFormula>AND(
				NOT(ISNEW()),
				ISPICKVAL( Service_Type__c,&quot;&quot;),
				Bypass__c = FAlSE,
				Relief_flag__c = TRUE
				)</errorConditionFormula>
    <errorDisplayField>Service_Type__c</errorDisplayField>
    <errorMessage>Please select atleast one value from the dropdown</errorMessage>
</ValidationRule>