force-app/main/default/objects/BGR__c/validationRules/Setting_must_not_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Setting_must_not_be_null</fullName>
    <active>true</active>
    <description>The Settings field should not be null - Created by Vinayak 10/10/2019</description>
    <errorConditionFormula>AND(
				NOT(ISNEW()),
				ISPICKVAL( Service_Type__c , &quot;Pressure&quot;),
				ISBLANK(Setting__c),
				Bypass__c = FALSE,
				Relief_flag__c = TRUE
			)</errorConditionFormula>
    <errorMessage>Pressure Setting: Please Enter a Value</errorMessage>
</ValidationRule>