force-app/main/default/objects/BGR__c/validationRules/Soft_Goods_material_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Soft_Goods_material_cannot_be_null</fullName>
    <active>true</active>
    <description>The Soft Goods Material cannot be null and must have a value - Created by Vinayak 11/10/2019</description>
    <errorConditionFormula>AND(
				NOT(ISNEW()),
				ISBLANK(Soft_Goods_Material_dynamic__c),
				Bypass__c = FALSE,
    Product_material_options_flag__c = TRUE
				)</errorConditionFormula>
    <errorMessage>Soft Goods Material: Please Select a Value from dropdown</errorMessage>
</ValidationRule>