force-app/main/default/objects/BGR__c/validationRules/Supply_Gas_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Supply_Gas_cannot_be_null</fullName>
    <active>true</active>
    <description>The Supply Gas field cannot be null - Created by Vinayak 10/10/2019</description>
    <errorConditionFormula>AND(
				NOT(ISNEW()),
				 Narrow_selection_on_flow_requirements__c = true,
				ISPICKVAL(Supply_Gas__c, &quot;&quot;),
				Section_B_flag__c = TRUE
)</errorConditionFormula>
    <errorMessage>Supply Gas: Please Select a Value from dropdown</errorMessage>
</ValidationRule>