force-app/main/default/objects/BGR__c/validationRules/Supply_Gas_Field_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Supply_Gas_Field_cannot_be_blank</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
				OR(
        NOT(ISPICKVAL( Supply_Gas__c, &quot;Customer Specified&quot;)),
								NOT(ISPICKVAL( Supply_Gas__c, &quot;Carbon Dioxide&quot;)),
								NOT(ISPICKVAL( Supply_Gas__c, &quot;Natural Gas&quot;)),
								NOT(ISPICKVAL( Supply_Gas__c, &quot;Nitrogen&quot;)),
								NOT(ISPICKVAL( Supply_Gas__c, &quot;Methane&quot;)),
								NOT(ISPICKVAL( Supply_Gas__c, &quot;Propane&quot;))
						),
				Section_B_flag__c = true	
)</errorConditionFormula>
    <errorDisplayField>Supply_Gas__c</errorDisplayField>
    <errorMessage>Please select a value from the dropdown</errorMessage>
</ValidationRule>