force-app/main/default/objects/BGR__c/validationRules/Vacuum_Setting_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Vacuum_Setting_cannot_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISPICKVAL( Service_Type__c , &quot;Vacuum&quot;),
ISBLANK(Setting__c),
Bypass__c = FALSE,
Relief_flag__c = TRUE
)</errorConditionFormula>
    <errorMessage>Vacuum Setting: Please Enter a Value</errorMessage>
</ValidationRule>