force-app/main/default/objects/BGR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Quote_Line__c</columns>
    <columns>Lead_Time_Site_10__c</columns>
    <columns>ASSYPARTNOBASE__c</columns>
    <columns>Lead_Time_Site_20__c</columns>
    <columns>Lead_Time_Site_30__c</columns>
    <columns>Lead_Time_Site_40__c</columns>
    <columns>Schedule__c</columns>
    <columns>Schedule_2__c</columns>
    <columns>Lead_Time_Adder__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Narrow_selection_on_flow_requirements__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>